Kickstart 4.1.2
================================================================================
# [MEDIUM] Extracting symlinks in Dry Run mode would cause existing symlinks to be removed
# [LOW] Kickstart won't start on servers with problematic open_basedir restrictions
# [LOW] PHP notices when extracting symlinks
# [LOW] No error message shown when the server throws an error (thanks, Carlos!)

Kickstart 4.1.1
================================================================================
~ Reset OPcache after removing the installation directory

Kickstart 4.1.0
================================================================================
+ Kickstart displays a more insightful error message if the archive file cannot be opened for reading.
# [LOW] A .user.ini file in the archive file could get in the way of the extraction. Now it gets the same treatment as php.ini and .htaccess files.
# [LOW] If you have both kickstart.php and a renamed copy (e.g. x.php) and try to access the renamed copy you get a Fatal Error.
# [HIGH] Contrary to what was promised, you could not really extract archives in a directory other than the one Kickstart is in.

Kickstart 4.0.0
================================================================================
+ You can list and extract archives in any directory, not just the one Kickstart is in
+ If you use the default backup output directories, Kickstart will automatically look for archives there if the directory where Kickstart is doesn't contain any archives
# [MEDIUM] Clicking on Browse when you had selected the Hybrid mode would attempt to launch the SFTP directory browser instead of the FTP directory browser
# [MEDIUM] The Port setting in (S)FTP options was ignored

Kickstart 3.9.0
================================================================================
# [HIGH] The Hybrid restoration mode failed to connect to FTP, making it equivalent to using direct file writes every time